--- a/front-end/src/pages/style/DefaultHome.css
+++ b/front-end/src/pages/style/DefaultHome.css
@@ -1,148 +1,137 @@
 /* Home Card */
 .home-card {
-  flex: 1;
-  background: #f9f9f9;
-  transition: transform 0.3s ease;
+    flex: 1;
+    background: #f9f9f9;
+    transition: transform 0.3s ease;
 }
 
 /* Profile Image */
 .profile-card img {
-  border-radius: 1rem;
-  width: 100%;
-  object-fit: cover;
+    border-radius: 1rem;
+    width: 100%;
+    object-fit: cover;
 }
 
 /* Profile Container */
 .profile-container {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  background: #fff;
-  border-radius: 1rem;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background: #fff;
+    border-radius: 1rem;
 }
 
 /* Event Details */
 .event-details,
 .project-details,
 .user-details {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  height: 25rem;
-  overflow: hidden;
-  background-color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    height: 25rem;
+    overflow: hidden;
+    background-color: #fff;
 }
 
-/* Project Background */
-.project-details .img {
-  background-image:
-    url('https://process.fs.teachablecdn.com/ADNupMnWyR7kCWRvm76Laz/resize=width:705/https://cdn.filestackcontent.com/MipxnobQRRS5h7raz9aM');
+.user-details {
+    background-image: linear-gradient(-45deg, #f4d35e, #ffafcc, #a2d2ff);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
-
-.user-details{
-  height: 50vh;
-  width: 100%;
-  background-image: linear-gradient(-45deg, #f4d35e, #ffafcc, #a2d2ff);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.user-details > * {
+    scale: 115%;
+    height: 10%;
 }
-
-.one,
-.img {
-  flex: 1;
-  width: 50%;
+.event-card-container,
+.project-card-container {
+    height: 20rem;
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-.img {
-  background-size: cover;
-  outline: none;
-  border: none;
+.home-event-card,
+.home-project-card {
+    border-radius: 0.5rem;
+    height: 15rem;
+    width: 50%;
+    min-width: 20rem;
+    overflow: auto;
+    display: block;
+    padding: 1rem;
+    position: absolute;
+    background-color: #fff;
+    border: 1px dashed #9e9e9e;
 }
-.event-card-container, .project-card-container{
-  height: 20rem;
-  width: 100%;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.home-event-card:nth-child(1) {
+    z-index: 10;
+    top: 0%;
 }
-.home-event-card, .home-project-card{
-  border-radius: .5rem;
-  height: 15rem;
-  width: 50%;
-  min-width: 20rem;
-  overflow: auto;
-  display: block;
-  padding: 1rem;
-  position: absolute;
-  background-color: #fff;
-  border: 1px dashed #9e9e9e;
+.home-project-card:nth-child(1) {
+    z-index: 10;
+    top: 0%;
 }
-.home-event-card:nth-child(1){
-  z-index: 10;
-  top: 0%;
+.home-event-card:nth-child(2) {
+    left: 45%;
+    top: 45%;
+    transform: translate(-50%, -50%);
+    opacity: 0.5;
+    z-index: 5;
 }
-.home-project-card:nth-child(1){
-  z-index: 10;
-  top: 0%;
+.home-project-card:nth-child(2) {
+    left: 55%;
+    top: 45%;
+    transform: translate(-50%, -50%);
+    opacity: 0.5;
+    z-index: 5;
 }
-.home-event-card:nth-child(2){
-  left: 45%;
-  top: 45%;
-  transform: translate(-50%, -50%);
-  opacity: .5;
-  z-index: 5;
+.home-event-card:nth-child(3) {
+    opacity: 0.1;
+    left: 40%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 0;
 }
-.home-project-card:nth-child(2){
-  left: 55%;
-  top: 45%;
-  transform: translate(-50%, -50%);
-  opacity: .5;
-  z-index: 5;
+.home-project-card:nth-child(3) {
+    opacity: 0.1;
+    left: 60%;
+    top: 60%;
+    transform: translate(-50%, -50%);
+    z-index: 0;
 }
-.home-event-card:nth-child(3){
-  opacity: .1;
-  left: 40%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 0;
+.view-more-btn,
+.project-view-more-btn {
+    position: absolute;
+    bottom: 2rem;
+    right: 1rem;
+    background-color: #9e9e9e;
+    border-radius: 1rem;
+    z-index: 30;
 }
-.home-project-card:nth-child(3){
-  opacity: .1;
-  left: 60%;
-  top: 60%;
-  transform: translate(-50%, -50%);
-  z-index: 0;
-}
-.view-more-btn, .project-view-more-btn{
-  position: absolute;
-  bottom: 2rem;
-  right: 1rem;
-  background-color: #9e9e9e;
-  border-radius: 1rem;
-  z-index: 30;
-}
-.view-more-btn:hover{
-  background-color: #333;
+.view-more-btn:hover {
+    background-color: #333;
 }
 @media screen and (max-width: 1080px) {
-  .event-details,
-  .project-details,
-  .user-details{
-    flex-direction: column;
-  }
-  .user-details{
-    width: 100%;
-  }
-  .img{
-    display: none;
-  }
-  .home-card{
-    align-items: center;
-  }
-  .home-title{
-    text-align: center;
-  }
+    .event-details,
+    .project-details,
+    .user-details {
+        flex-direction: column;
+    }
+    .user-details {
+        width: 100%;
+    }
+    .img {
+        display: none;
+    }
+    .home-card {
+        align-items: center;
+    }
+    .home-title {
+        text-align: center;
+    }
 }
