--- a/front-end/src/pages/auth/style/Register.css
+++ b/front-end/src/pages/auth/style/Register.css
@@ -1,4 +1,4 @@
-.register-body{
+.register-body {
   min-height: 100vh;
   max-height: fit-content;
   overflow-y: auto;
@@ -8,21 +8,21 @@
   place-content: center;
   background-image: linear-gradient(45deg, #ffd900, #ffffff);
 }
-.register-container{
+.register-container {
   padding: 2rem 0;
   min-height: 50vh;
   max-height: fit-content;
   min-width: fit-content;
-  transition: .5s height ease-in-out;
+  transition: 0.5s height ease-in-out;
   max-width: 50vw;
   border: 1px solid #9e9e9e55;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   display: flex;
-  align-items: center;  
+  align-items: center;
   background-color: #fff;
   box-shadow: 0 1rem 1rem #00000022;
 }
-.logo{
+.logo {
   flex: 1;
   display: flex;
   justify-content: center;
@@ -30,13 +30,12 @@
   border-right: 1px solid #9e9e9e55;
   height: 80%;
 }
-.register-form{
+.register-form {
   width: 100%;
   flex: 1;
   display: flex;
-
 }
-.register-form form{
+.register-form form {
   padding: 0 1rem;
   width: 100%;
   display: flex;
@@ -45,19 +44,19 @@
   flex-direction: column;
   gap: 1rem;
 }
-.descripton{
-  opacity: .3;
+.descripton {
+  opacity: 0.3;
 }
-.register-form input{
+.register-form input {
   height: 2.5rem;
   width: 100%;
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
   border-radius: 6px;
   border: 1px solid #9e9e9e;
   font-size: 1rem;
   margin-top: 4px;
 }
-.register-form input[type="submit"]{
+.register-form input[type="submit"] {
   background-color: royalblue;
   color: #fff;
   border: none;
@@ -72,21 +71,21 @@
 .register-form input[type="submit"]:hover:not(:disabled) {
   background-color: #3a5cc9;
 }
-.register-form label{
+.register-form label {
   width: 100%;
 }
-.register-form-portion{
+.register-form-portion {
   height: 100%;
   min-width: 20rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
-#forgot-password{
+#forgot-password {
   float: right;
   margin-top: 1rem;
 }
-.student-role{
+.student-role {
   height: 6rem;
   max-height: fit-content;
   min-width: 20rem;
@@ -98,29 +97,29 @@
   background-color: #fff;
   border: 1px solid #9e9e9e9e;
   border-radius: 6px;
-  transition: .2s all ease;
+  transition: 0.2s all ease;
 }
-.student-role svg{
+.student-role svg {
   flex: 1;
   height: 100%;
   padding: 0 1rem;
   border-right: 1px solid #9e9e9e;
 }
-.student-role p{
+.student-role p {
   padding: 5px 15px;
   color: #000;
   flex: 3;
 }
-.student-role p h4{
+.student-role p h4 {
   font-weight: bold;
   font-size: 1rem;
 }
-.student-role:focus{
+.student-role:focus {
   border-color: rgba(65, 105, 225, 0.8);
   background-color: rgba(65, 105, 225, 0.4);
 }
-.next-btn{
-  padding: .5rem 1rem;
+.next-btn {
+  padding: 0.5rem 1rem;
   font-size: 1rem;
   border-radius: 6px;
   border: none;
@@ -129,26 +128,26 @@
   height: 2.5rem;
   background-color: royalblue;
 }
-.username{
+.username {
   width: 100%;
   display: flex;
-  gap: .5rem;
+  gap: 0.5rem;
 }
-.username label{
+.username label {
   flex: 1;
 }
-.register-form-portion{
+.register-form-portion {
   width: 20vw;
 }
-.phnAndGender{
+.phnAndGender {
   display: flex;
 }
-.phnAndGender label{
+.phnAndGender label {
   flex: 1;
 }
-.gender select{
+.gender select {
   width: 100%;
-  padding: .5rem 1rem;
+  padding: 0.5rem 1rem;
   font-size: 1rem;
   height: 2.5rem;
   margin-top: 4px;
@@ -156,7 +155,7 @@
   border: 1px solid #9e9e9e;
   border-radius: 6px;
 }
-.redirect{
+.redirect {
   text-align: center;
 }
 .verification-dialog-overlay {
@@ -165,11 +164,15 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0,0,0,0.5);
+  background: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(1rem);
-  display: flex;
+  display:none;
   justify-content: center;
   align-items: center;
+}
+
+.verification-dialog-overlay.active {
+  display: flex;
 }
 
 .verification-dialog {
@@ -187,9 +190,9 @@
   width: 100%;
   text-align: center;
 }
-.action-btns{
+.action-btns {
   display: flex;
-  gap: .5rem;
+  gap: 0.5rem;
   justify-content: center;
 }
 .verification-dialog button {
@@ -206,7 +209,7 @@
   background-color: #3a5cc9;
   color: white;
 }
-.cancel{
+.cancel {
   background-color: #ff4444;
   color: white;
 }
@@ -214,7 +217,7 @@
   background-color: #cc0000;
 }
 @media screen and (max-width: 1080px) {
-  .register-container{
+  .register-container {
     flex-direction: column;
   }
 }
